# PASTED

./: .buildinfo  CHANGELOG.md  LICENSE  README.md  architecture.html  changelog.html  cli.html  codecov.yml  conftest.py  genindex.html  index.html  objects.inv  pasted.py  py-modindex.html  pyproject.toml  quickstart.html  readthedocs.yaml  run_pasted.py  search.html  searchindex.js  setup.py
.doctrees/: architecture.doctree  changelog.doctree  cli.doctree  environment.pickle  index.doctree  quickstart.doctree
.doctrees/api/: atoms.doctree  generator.doctree  index.doctree  io.doctree  metrics.doctree  optimizer.doctree  placement.doctree
.github/workflows/: ci.yml
_modules/: index.html
_modules/pasted/: _atoms.html  _generator.html  _io.html  _metrics.html  _optimizer.html  _placement.html
_sources/: quickstart.md
_sources/api/: atoms.rst  generator.rst  index.rst  io.rst  optimizer.rst  placement.rst
_static/: documentation_options.js
api/: atoms.html  generator.html  index.html  io.html  metrics.html  optimizer.html  placement.html
docs/: api.md  architecture.md  cli.md  conf.py  index.md  index.rst  quickstart.md
docs/api/: atoms.rst  config.rst  generator.rst  index.rst  io.rst  metrics.rst  optimizer.rst  placement.rst
pasted/: _generator.py  _io.py  cli.py
pasted/_ext/: _relax.cpp  _steinhardt.cpp
src/pasted/: __init__.py  _atoms.py  _config.py  _generator.py  _io.py  _metrics.py  _optimizer.py  _placement.py  cli.py  neighbor_list.py
src/pasted.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pasted/_ext/: __init__.py  _bond_angle_core.cpp  _combined_core.cpp  _graph_core.cpp  _maxent.cpp  _relax.cpp  _steinhardt.cpp
test/: test_edge_cases.py  test_edge_cases_2.py  test_io.py
tests/: conftest.py  test_adversarial.py  test_atoms.py  test_atoms_extra.py  test_cli.py  test_cpp_fuzz.py  test_docs_non_quickstart.py  test_edge_cases.py  test_edge_cases_2.py  test_ext_init.py  test_fallback_paths.py  test_generator.py  test_generator_extra.py  test_io.py  test_io_extra.py  test_jitter_memory.py  test_maxent.py  test_metrics.py  test_optimizer.py  test_optimizer_extra.py  test_placement.py  test_property_based.py  test_quickstart.py  test_type_contracts.py  test_type_coverage.py  test_v023.py  test_v044.py
