[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "pasted"
version = "0.1.7"
description = "Pointless Atom STructure with Entropy Diagnostics — structure fuzzer for QC/ML-potential codes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["quantum chemistry", "structure generation", "fuzzing", "machine learning potentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
pasted = "pasted.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pybind11>=2.12",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.1",
    "myst-parser>=3.0",
    "sphinx-autosummary-accessors",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PL"]
ignore = [
    "PLR2004",   # magic-value comparisons are fine in scientific code
    "PLR0912",   # too-many-branches — intentional in generator loop
    "PLR0913",   # too-many-arguments — intentional in StructureGenerator
    "PLR0915",   # too-many-statements — intentional in StructureGenerator.__init__
    "B006",      # mutable default args — we use None + defaults inside
]

[tool.ruff.lint.isort]
known-first-party = ["pasted"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

# _metrics.py contains a try/except ImportError block for scipy < 1.15 compatibility.
# The except branch is unreachable on current scipy, so its type: ignore comments are
# flagged as unused. Suppress only that check for this one file.
[[tool.mypy.overrides]]
module = ["pasted._metrics"]
warn_unused_ignores = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --import-mode=importlib"
