[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "pasted"
version = "0.4.4"
description = "Pointless Atom STructure with Entropy Diagnostics — structure fuzzer for QC/ML-potential codes"
readme = "README.md"
license = "MIT"
keywords = ["quantum chemistry", "structure generation", "fuzzing", "machine learning potentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
authors = [
    {name = "ss0832", email = "highlighty876@gmail.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pybind11>=2.12",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.1",
    "myst-parser>=3.0",
    "sphinx-autosummary-accessors",
]

[project.scripts]
pasted = "pasted.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pasted._ext" = ["*.so", "*.pyd", "*.cpp"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (potential bugs and design issues)
    "PT",  # flake8-pytest-style (pytest best practices)
    "PIE", # flake8-pie (unnecessary code / noise removal)
    "RUF", # Ruff-specific rules (unused noqa, mutable defaults, unpacked vars…)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PT011",  # pytest.raises(ValueError) match= — too noisy for broad value-error tests
    # RUF001/002/003: pasted uses Unicode math notation (×, –, −) intentionally
    # in docstrings, strings, and comments (e.g. "~20–50× faster").
    # Replacing every × with 'x' would degrade scientific readability.
    "RUF001",
    "RUF002",
    "RUF003",
    # RUF022: __all__ is grouped by API category, not sorted alphabetically.
    "RUF022",
]

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]

# --- source package: enforce strict typing ---
# These settings apply to src/pasted/ where we own every line.
check_untyped_defs   = true
disallow_untyped_defs = true
warn_unused_ignores  = true

# --- C++ extensions: pybind11 .so files have no stubs, ignore them ---
[[tool.mypy.overrides]]
module = ["pasted._ext.*", "pasted._ext"]
ignore_missing_imports = true
ignore_errors = true

# --- third-party libraries without stubs ---
[[tool.mypy.overrides]]
module = ["scipy.*", "numpy.*", "psutil.*"]
ignore_missing_imports = true

# --- tests: check bodies but don't require full annotations on helpers ---
# (Fixtures and one-liner helpers would need annotations everywhere otherwise)
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
warn_unused_ignores   = false
